--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +23,10 @@
     <section class="content">
       <header class="header">
         <h1>ATR-2026 Shutdown Tracker</h1>
-        <p>Logged in as: <span id="loggedInUser">WindowsUser</span></p>
+        <div class="header-right">
+          <p>Logged in as: <span id="loggedInUser">WindowsUser</span></p>
+          <button id="themeToggleBtn" class="btn" type="button">Toggle Theme</button>
+        </div>
       </header>
 
       <main>
