--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ATR-2026 Shutdown Inspection Tracker – PATA Plant</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body class="landing-body">
+<body class="landing-body" data-page="login">
   <main class="landing-container">
     <section class="landing-card">
-      <h1>ATR-2026 Shutdown Inspection Tracker</h1>
+      <div class="list-actions">
+        <h1>ATR-2026 Shutdown Inspection Tracker</h1>
+        <button id="themeToggleBtn" class="btn" type="button">Toggle Theme</button>
+      </div>
       <p class="subtitle">PATA Plant Industrial Inspection System</p>
       <label for="username">Windows Username</label>
       <input id="username" type="text" placeholder="e.g. shivam.jha" />
