Refine inspection page to unit-wise panels and improve workflows

--- a/inspection.html
+++ b/inspection.html
@@ -42,24 +42,7 @@
 
           <div class="filter-tabs" id="equipmentTypeTabs"></div>
 
-          <div class="table-wrap">
-            <table>
-              <thead>
-                <tr>
-                  <th><input type="checkbox" id="selectAllRows" /></th>
-                  <th>ID</th>
-                  <th>Tag</th>
-                  <th>Unit</th>
-                  <th>Type</th>
-                  <th>Inspection</th>
-                  <th>Final Status</th>
-                  <th>Updated By</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody id="inspectionTableBody"></tbody>
-            </table>
-          </div>
+          <div id="unitWiseLists" class="unit-lists"></div>
         </section>
 
         <section class="form-card hidden" id="inspectionFormPanel">
