--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
         <a class="nav-link" href="dashboard.html">Dashboard</a>
         <a class="nav-link" href="inspection.html">Update Inspection</a>
         <a class="nav-link" href="observation.html">Observation Entry</a>
+        <a class="nav-link" href="requisition.html">Requisition</a>
         <a class="nav-link active admin-only" href="admin.html">Admin Panel</a>
       </nav>
     </aside>
