--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ATR-2026 Shutdown Inspection Tracker – PATA Plant</title>
+  <title>ATR-2026 Login</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body class="landing-body" data-page="login">
@@ -13,11 +13,17 @@
         <h1>ATR-2026 Shutdown Inspection Tracker</h1>
         <button id="themeToggleBtn" class="btn" type="button">Toggle Theme</button>
       </div>
-      <p class="subtitle">PATA Plant Industrial Inspection System</p>
-      <label for="username">Windows Username</label>
-      <input id="username" type="text" placeholder="e.g. shivam.jha" />
-      <button id="loginBtn" class="btn btn-primary">Continue to Dashboard</button>
-      <p class="hint">Admin default user: <strong>shivam.jha</strong></p>
+      <p class="subtitle">Login with User ID and Password</p>
+      <form id="loginForm">
+        <label>User ID
+          <input id="username" type="text" required />
+        </label>
+        <label>Password
+          <input id="password" type="password" required />
+        </label>
+        <button id="loginBtn" class="btn btn-primary" type="submit">Login</button>
+      </form>
+      <p class="hint">Default admin: shivam.jha / admin@123</p>
     </section>
   </main>
   <script src="js/storage.js"></script>
