--- a/observation.html
+++ b/observation.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Observation Entry | ATR-2026 Tracker</title>
   <link rel="stylesheet" href="css/styles.css" />
-  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 <body data-page="observation">
   <div class="app-shell">
@@ -15,10 +14,10 @@
         <a class="nav-link" href="dashboard.html">Dashboard</a>
         <a class="nav-link" href="inspection.html">Update Inspection</a>
         <a class="nav-link active" href="observation.html">Observation Entry</a>
+        <a class="nav-link" href="requisition.html">Requisition</a>
         <a class="nav-link admin-only" href="admin.html">Admin Panel</a>
       </nav>
     </aside>
-
     <section class="content">
       <header class="header">
         <h1>ATR-2026 Shutdown Tracker</h1>
@@ -31,21 +30,14 @@
       <main>
         <section class="table-card">
           <div class="list-actions">
-            <h2>Past Observations</h2>
-            <button class="btn btn-primary" type="button" id="openObservationFormBtn">Add New Observation</button>
+            <h2>Observation List</h2>
+            <button class="btn btn-primary" id="openObservationFormBtn" type="button">Add New Observation</button>
           </div>
           <div class="table-wrap">
             <table>
               <thead>
                 <tr>
-                  <th>Tag</th>
-                  <th>Unit</th>
-                  <th>Location</th>
-                  <th>Observation</th>
-                  <th>Recommendation</th>
-                  <th>Images</th>
-                  <th>Date</th>
-                  <th>Actions</th>
+                  <th>Tag</th><th>Unit</th><th>Location</th><th>Observation</th><th>Recommendation</th><th>Status</th><th>Image</th><th>Actions</th>
                 </tr>
               </thead>
               <tbody id="observationsTableBody"></tbody>
@@ -54,39 +46,31 @@
         </section>
 
         <section class="form-card hidden" id="observationFormPanel">
-          <h2>Observation Entry</h2>
+          <h2>Add Observation</h2>
           <form id="observationForm" class="form-grid">
-            <label>Tag Number
-              <input type="text" id="obsTag" required />
+            <label>Tag Number <input type="text" id="obsTag" required /></label>
+            <label>Unit <input type="text" id="obsUnit" required /></label>
+            <label>Location <input type="text" id="obsLocation" required /></label>
+            <label>Status
+              <select id="obsStatus">
+                <option>Not Started</option>
+                <option>In Progress</option>
+                <option>Completed</option>
+              </select>
             </label>
-            <label>Unit
-              <input type="text" id="obsUnit" required />
-            </label>
-            <label>Location
-              <input type="text" id="obsLocation" required />
-            </label>
-            <label class="full-width">Observation
-              <textarea id="obsObservation" required></textarea>
-            </label>
-            <label class="full-width">Recommendation
-              <textarea id="obsRecommendation" required></textarea>
-            </label>
-            <label class="full-width">Image Uploads
-              <input type="file" id="obsImage" accept="image/*" multiple />
-            </label>
-            <div class="multi-preview" id="imagePreviewList"></div>
+            <label class="full-width">Observation <textarea id="obsObservation" required></textarea></label>
+            <label class="full-width">Recommendation <textarea id="obsRecommendation" required></textarea></label>
+            <label class="full-width">Image Uploads <input type="file" id="obsImage" accept="image/*" multiple /></label>
+            <div class="multi-preview full-width" id="imagePreviewList"></div>
             <div class="actions full-width">
-              <button class="btn btn-primary" type="submit">Save Observation</button>
-              <button class="btn" type="button" id="draftEmailBtn">Draft Email</button>
-              <button class="btn" type="button" id="downloadObservationPdfBtn">Download PDF Report</button>
-              <button class="btn" type="button" id="closeObservationFormBtn">Close Form</button>
+              <button class="btn btn-primary" type="submit">Save</button>
+              <button class="btn" id="closeObservationFormBtn" type="button">Close Form</button>
             </div>
           </form>
         </section>
       </main>
     </section>
   </div>
-
   <script src="js/storage.js"></script>
   <script src="js/app.js"></script>
 </body>
