--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="themeToggleBtn" class="btn" type="button">Toggle Theme</button>
       </div>
       <p class="subtitle">Login with User ID and Password</p>
+
       <form id="loginForm">
         <label>User ID
           <input id="username" type="text" required />
@@ -21,9 +22,52 @@
         <label>Password
           <input id="password" type="password" required />
         </label>
+        <label class="inline-check">
+          <input id="showPasswordToggle" type="checkbox" /> Show Password
+        </label>
         <button id="loginBtn" class="btn btn-primary" type="submit">Login</button>
       </form>
-      <p class="hint">Default admin: shivam.jha / </p>
+
+      <hr />
+      <h3>Create Account</h3>
+      <form id="signupForm">
+        <label>New User ID
+          <input id="newUsername" type="text" required />
+        </label>
+        <label>New Password
+          <input id="newPassword" type="password" required />
+        </label>
+        <label>Role
+          <select id="newRole">
+            <option value="inspector">inspector</option>
+            <option value="engineer">engineer</option>
+          </select>
+        </label>
+        <button class="btn" type="submit">Create Account Request</button>
+      </form>
+
+      
+      <details>
+        <summary>Auto GitHub Sync (Optional)</summary>
+        <label >GitHub Owner
+          <input id="syncOwner" type="text" placeholder="owner" />
+        </label>
+        <label>Repository
+          <input id="syncRepo" type="text" placeholder="repo" />
+        </label>
+        <label>Branch
+          <input id="syncBranch" type="text" value="main" />
+        </label>
+        <label>Token (repo contents write)
+          <input id="syncToken" type="password" placeholder="ghp_..." />
+        </label>
+        <label class="inline-check">
+          <input id="syncEnabled" type="checkbox" /> Enable automatic sync on every submit/save
+        </label>
+      </details>
+
+      <p id="authMessage" class="hint"></p>
+      <p class="hint">Default admin: shivam.jha / admin@123</p>
     </section>
   </main>
   <script src="js/storage.js"></script>
