--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body data-page="dashboard">
+<body>
   <div class="app-shell">
     <aside class="sidebar">
       <h2>ATR-2026</h2>
@@ -16,15 +16,16 @@
         <a class="nav-link" href="inspection.html">Update Inspection</a>
         <a class="nav-link" href="observation.html">Observation Entry</a>
         <a class="nav-link" href="requisition.html">Requisition</a>
-        <a class="nav-link admin-only" href="admin.html">Admin Panel</a>
+        <a class="nav-link admin-only" href="admin.html">Admin</a>
       </nav>
     </aside>
     <section class="content">
       <header class="header">
         <h1>ATR-2026 Shutdown Tracker</h1>
         <div class="header-right">
-          <p>Logged in as: <span id="loggedInUser">WindowsUser</span></p>
+          <p>Logged in as: <span id="loggedInUser"></span></p>
           <button id="themeToggleBtn" class="btn" type="button">Toggle Theme</button>
+          <button id="logoutBtn" class="btn" type="button">Logout</button>
         </div>
       </header>
       <main>
@@ -35,18 +36,16 @@
           <article class="card"><h3>Not Started</h3><p id="notStartedCount">0</p></article>
           <article class="card"><h3>Today's Progress</h3><p id="todaysProgressCount">0</p></article>
         </section>
-
         <section class="charts-grid">
           <article class="chart-card"><h3>Vessel Summary</h3><canvas id="vesselChart"></canvas></article>
           <article class="chart-card"><h3>Pipeline Summary</h3><canvas id="pipelineChart"></canvas></article>
           <article class="chart-card"><h3>Steam Trap Summary</h3><canvas id="steamTrapChart"></canvas></article>
-          <article class="chart-card wide"><h3>Unit Comparison (Drill-down on click)</h3><canvas id="unitProgressChart"></canvas></article>
+          <article class="chart-card wide"><h3>Unit Comparison Chart</h3><canvas id="unitComparisonChart"></canvas></article>
+          <article class="chart-card wide"><h3>Daily Progress Chart</h3><canvas id="dailyProgressChart"></canvas></article>
         </section>
       </main>
     </section>
   </div>
-  <script src="js/storage.js"></script>
-  <script src="js/dashboard.js"></script>
-  <script src="js/app.js"></script>
+  <script type="module" src="js/dashboardMain.js"></script>
 </body>
 </html>
