--- a/admin.html
+++ b/admin.html
@@ -89,29 +89,32 @@
 
 
         <section class="form-card">
-          <h3>Central Database Sync (JSONBin)</h3>
-          <p class="hint">Use JSONBin as central cloud backend. Runtime database is pushed as one shared JSON record.</p>
+          <h3>Central Database Sync (Firebase)</h3>
+          <p class="hint">Use Firebase Firestore as central cloud backend. Runtime database is synced as one shared document in real time.</p>
           <div class="actions">
             <button class="btn" id="exportAllDataBtn" type="button">Download Runtime JSON Backup</button>
-            <button class="btn btn-primary" id="syncGithubBtn" type="button">Sync All Data to JSONBin Now</button>
+            <button class="btn btn-primary" id="syncGithubBtn" type="button">Sync All Data to Firebase Now</button>
           </div>
-          <p class="hint">JSONBin Bin ID and Master Key are set from Login page Cloud Sync Settings.</p>
+          <p class="hint">Enable Firebase sync from Login page Cloud Sync Settings. Configure Cloudinary there for image uploads.</p>
         </section>
 
         <section class="form-card">
           <h3>Database Path Settings</h3>
-          <label>Inspections JSON Path
-            <input type="text" value="/data/inspections.json" readonly />
+          <label>Firestore Collection
+            <input type="text" value="atr2026" readonly />
           </label>
-          <label>Users JSON Path
-            <input type="text" value="/data/users.json" readonly />
+          <label>Firestore Document
+            <input type="text" value="runtime" readonly />
           </label>
-          <p class="hint">Visual setting only for static deployment.</p>
+          <p class="hint">Cloudinary image links are stored under the <code>images</code> field in this runtime document.</p>
         </section>
       </main>
     </section>
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/app.js"></script>
 </body>
