--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <input id="showPasswordToggle" type="checkbox" /> Show Password
         </label>
         <button id="loginBtn" class="btn btn-primary" type="submit">Login</button>
+        <button id="googleSignInBtn" class="btn" type="button">Sign in with Google</button>
       </form>
 
       <hr />
@@ -48,15 +49,15 @@
 
       
       <details>
-        <summary>Cloud Sync Settings (JSONBin)</summary>
-        <label>JSONBin Bin ID
-          <input id="syncJsonbinBinId" type="text" placeholder="e.g. 67f0abc12345" />
+        <summary>Cloud Sync Settings (Firebase + Cloudinary)</summary>
+        <label>Cloudinary Cloud Name
+          <input id="cloudinaryCloudName" type="text" placeholder="your-cloud-name" />
         </label>
-        <label>JSONBin Master Key
-          <input id="syncJsonbinApiKey" type="password" placeholder="$2b$..." />
+        <label>Cloudinary Upload Preset (Unsigned)
+          <input id="cloudinaryUploadPreset" type="text" placeholder="atr2026_unsigned" />
         </label>
         <label class="inline-check">
-          <input id="syncEnabled" type="checkbox" /> Enable automatic cloud sync on every submit/save/delete via JSONBin
+          <input id="syncEnabled" type="checkbox" /> Enable automatic Firebase sync on every submit/save/delete
         </label>
       </details>
 
@@ -64,6 +65,9 @@
       <p class="hint">Default admin: shivam.jha / admin@123</p>
     </section>
   </main>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/app.js"></script>
 </body>
