--- a/observation.html
+++ b/observation.html
@@ -71,6 +71,9 @@
       </main>
     </section>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/app.js"></script>
 </body>
