Refine split layouts, menu profile, and popup status UX

--- a/requisition.html
+++ b/requisition.html
@@ -28,7 +28,7 @@
         </div>
       </header>
 
-      <main>
+      <main class="page-main" id="requisitionMain">
         <section class="table-card">
           <div class="list-actions">
             <h2>Requisitions</h2>
