--- a/inspection.html
+++ b/inspection.html
@@ -28,7 +28,7 @@
         </div>
       </header>
 
-      <main>
+      <main class="inspection-main" id="inspectionMain">
         <section class="table-card">
           <div class="list-actions">
             <label>Filter Unit
@@ -37,8 +37,8 @@
             <label>Search Tag
               <input type="text" id="tagSearch" placeholder="Enter equipment tag" />
             </label>
-            <button class="btn btn-primary" type="button" id="openAddEquipmentBtn">Add Equipment</button>
-            <button class="btn" type="button" id="markSelectedCompletedBtn">Mark Selected Completed</button>
+            <button class="btn btn-primary btn-small inspection-action-btn add-btn" type="button" id="openAddEquipmentBtn">Add Equipment</button>
+            <button class="btn btn-small inspection-action-btn complete-btn" type="button" id="markSelectedCompletedBtn">Mark Selected Complete</button>
           </div>
 
           <div class="filter-tabs" id="equipmentTypeTabs"></div>
@@ -49,9 +49,6 @@
         <section class="form-card hidden" id="inspectionFormPanel">
           <h2 id="inspectionFormTitle">Add Equipment</h2>
           <form id="inspectionForm" class="form-grid">
-            <label>ID
-              <input type="number" id="id" />
-            </label>
             <label>Equipment Tag Number
               <input type="text" id="equipment_tag_number" required />
             </label>
@@ -80,6 +77,7 @@
             </label>
             <label>Inspection Possible
               <select id="inspection_possible">
+                <option value="">-- Keep Blank --</option>
                 <option>Yes</option>
                 <option>No</option>
               </select>
@@ -92,6 +90,7 @@
             </label>
             <label>Final Status
               <select id="final_status" required>
+                <option value="">-- Keep Blank --</option>
                 <option>Not Started</option>
                 <option>In Progress</option>
                 <option>Completed</option>
