Improve menu UX and add PDF report workflows

--- a/inspection.html
+++ b/inspection.html
@@ -39,6 +39,7 @@
             </label>
             <button class="btn btn-primary btn-small" type="button" id="openAddEquipmentBtn">Add Equipment</button>
             <button class="btn btn-small" type="button" id="markSelectedCompletedBtn">Mark Selected Complete</button>
+            <button class="btn btn-small" type="button" id="downloadVesselReportBtn">Download Vessel PDF</button>
           </div>
 
           <div class="filter-tabs" id="equipmentTypeTabs"></div>
@@ -119,6 +120,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/app.js"></script>
 </body>
