Improve UI button layout and batch update performance

--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
       <main class="admin-grid">
         <section class="table-card">
           <h2>Pending Access Requests</h2>
-          <div class="list-actions">
+          <div class="list-actions page-toolbar">
             <label>User Filter
               <select id="adminUserFilter">
                 <option value="all">All</option>
