--- a/inspection.html
+++ b/inspection.html
@@ -30,7 +30,7 @@
 
       <main class="inspection-main" id="inspectionMain">
         <section class="table-card">
-          <div class="list-actions">
+          <div class="list-actions page-toolbar">
             <label>Filter Unit
               <select id="unitFilter"></select>
             </label>
