--- a/observation.html
+++ b/observation.html
@@ -29,7 +29,7 @@
 
       <main class="page-main" id="observationMain">
         <section class="table-card">
-          <div class="list-actions">
+          <div class="list-actions page-toolbar">
             <h2>Observation List</h2>
             <button class="btn btn-primary" id="openObservationFormBtn" type="button" aria-controls="observationFormPanel" aria-expanded="false">Add New Observation</button>
           </div>
