--- a/requisition.html
+++ b/requisition.html
@@ -30,7 +30,7 @@
 
       <main class="page-main" id="requisitionMain">
         <section class="table-card">
-          <div class="list-actions">
+          <div class="list-actions page-toolbar">
             <h2>Requisitions</h2>
             <button class="btn btn-primary" id="openRequisitionFormBtn" type="button" aria-controls="requisitionFormPanel" aria-expanded="false">Add New</button>
           </div>
