--- a/inspection.html
+++ b/inspection.html
@@ -76,11 +76,11 @@
             <label>Last Inspection Year
               <input type="number" id="last_inspection_year" min="2000" max="2099" />
             </label>
-            <label>Inspection Possible
+            <label>Inspection Type
               <select id="inspection_possible">
-                <option value="">-- Keep Blank --</option>
-                <option>Yes</option>
-                <option>No</option>
+                <option value=" ">-- Keep Blank --</option>
+                <option>Internal</option>
+                <option>External</option>
               </select>
             </label>
             <label>Inspection Date
