--- a/admin.html
+++ b/admin.html
@@ -80,7 +80,7 @@
 
           <div class="actions">
             <button class="btn" id="downloadTemplateBtn" type="button">Download Excel Template</button>
-            <button class="btn" id="exportInspectionsBtn" type="button">Export Inspections (All Form Fields)</button>
+            <button class="btn" id="exportInspectionsBtn" type="button">Export Excel Template (All Form Fields)</button>
           </div>
           <input type="file" id="bulkUploadFile" accept=".xlsx,.xls" />
           <button class="btn btn-primary" id="bulkUploadBtn" type="button">Upload Excel Data</button>
