Split inspection type and inspection form across app flows

--- a/admin.html
+++ b/admin.html
@@ -59,7 +59,7 @@
 
         <section class="form-card">
           <h3>Bulk Upload Data (Excel)</h3>
-          <p class="hint">For inspections: existing `id` updates record, blank `id` creates a new record.</p>
+          <p class="hint">For inspections: existing `id` updates record, blank `id` creates a new record. Use `inspection_type` = Planned/Opportunity Based and `inspection_form` = BOROSCOPY/INTERNAL/EXTERNAL.</p>
 
           <label>Upload Type (Dropdown)
             <select id="uploadTypeSelect">
