--- a/inspection.html
+++ b/inspection.html
@@ -76,11 +76,12 @@
             <label>Last Inspection Year
               <input type="number" id="last_inspection_year" min="2000" max="2099" />
             </label>
-            <label>Inspection Type
-              <select id="inspection_possible">
-                <option value=" ">-- Keep Blank --</option>
-                <option>Internal</option>
-                <option>External</option>
+            <label>Inspection Form
+              <select id="inspection_form">
+                <option value="">-- Keep Blank --</option>
+                <option>BOROSCOPY</option>
+                <option>INTERNAL</option>
+                <option>EXTERNAL</option>
               </select>
             </label>
             <label>Inspection Date
