Add Steam Trap hot/cold dashboard filter

--- a/inspection.html
+++ b/inspection.html
@@ -82,6 +82,8 @@
                 <option>BOROSCOPY</option>
                 <option>INTERNAL</option>
                 <option>EXTERNAL</option>
+                <option>HOT</option>
+                <option>COLD</option>
               </select>
             </label>
             <label>Inspection Date
