--- a/inspection.html
+++ b/inspection.html
@@ -82,8 +82,8 @@
                 <option>BOROSCOPY</option>
                 <option>INTERNAL</option>
                 <option>EXTERNAL</option>
-                <option>HOT</option>
-                <option>COLD</option>
+                <option>HOT JOB</option>
+                <option>COLD JOB</option>
               </select>
             </label>
             <label>Inspection Date
