--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,7 @@
         <h1>ATR-2026 Shutdown Tracker</h1>
         <div class="header-right">
           <p>Logged in as: <span id="loggedInUser">WindowsUser</span></p>
+          <button id="exportDashboardPdfBtn" class="btn" type="button">Export Dashboard + Observations PDF</button>
           <button id="themeToggleBtn" class="btn" type="button">Toggle Theme</button>
         </div>
       </header>
@@ -40,6 +41,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/dashboard.js"></script>
   <script src="js/app.js"></script>
